--- a/.gitignore
+++ b/.gitignore
@@ -46,5 +46,5 @@ app.*.map.json
 /android/app/release
 
 # Firebase details
-# waddlerproject@gmail.com
-# 03008601958
+# email: waddlerproject@gmail.com
+# password: 03008601958
