--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   weather: ^2.0.0
   geolocator: ^7.0.3
   toast: ^0.1.5
+  cached_network_image: ^3.0.0
+  fancy_shimmer_image: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
